# rpygrep

./: LICENSE  README.md  main.py  makefile  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
src/rpygrep/: __init__.py  base.py  helpers.py  types.py
tests/: conftest.py  test_base.py  test_helpers.py
tests/__snapshots__/test_base/: TestRipGrepFind.test_exclude_globs.json  TestRipGrepFind.test_include_types.json  TestRipGrepFind.test_max_depth.json  TestRipGrepFind.test_sort.json  TestRipGrepSearch.test_after_context.json  TestRipGrepSearch.test_case_insensitive.json  TestRipGrepSearch.test_max_matches.json  TestRipGrepSearch.test_ripgrep_search.json
tests/dataset/: .hidden  data.json  data.yml  hello_world.go  hello_world.sh
