[project]
name = "rpygrep"
version = "0.2.1"
description = "A Python wrapper for ripgrep"
readme = "README.md"
authors = [
    { name = "Strawgate", email = "williamseaston@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "ripgrep>=14.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--inline-snapshot=disable","-vv","-s", "--ignore=tests/dataset"]
norecursedirs = ["tests/dataset"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
  "ruff",
  "inline-snapshot>=0.29.2",
  "dirty-equals>=0.10.0",
  "basedpyright>=1.29.4",
  "deepdiff>=8.5.0",
  "pydantic>=2.11.7",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py310"
extend-exclude = [
    "**/archived/**",
]
lint.fixable = ["ALL"]
lint.ignore = [
    "COM812",
    "PLR0913", # Too many arguments, MCP Servers have a lot of arguments, OKAY?!
]


lint.extend-select = [
    "A",
    "ARG",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "F",
    "FURB",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]

line-length = 140


[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*.py" = [
    "S101", # Ignore asserts
    "DTZ005", # Ignore datetime.UTC
    "PLR2004", # Ignore magic values
    "E501", # Ignore line length
]
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "recommended"
extraPaths = ["src/"]
include = ["src/"]
exclude = [
    "**/archive/**",
    "**/node_modules/**",
    "**/__pycache__/**",
    "**/.venv/**",
    ".venv",
    "**/.pytest_cache/**",
    "**/.ruff_cache/**",
    "**/uv/python/**",
    "**/tests/dataset/**",
]
reportMissingTypeStubs = false
reportExplicitAny = false
